data/derived/comb/progs/unify/prog2066.ml.out
Characters 11-12:
  let z = (y x);;
             ^
Error: This expression has type int -> int
       but an expression was expected of type int
